# rust-terminal

./: .env.example  .gitignore  AGENTS.md  README.md  SETUP.md  run.sh
benchmarks/: README.md  latency.js  latency.py  memory.js  memory.py  run-all.sh  throughput.js  throughput.py
benchmarks/results/: baseline.txt  comparison.md  optimized.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActivityStream.tsx  BranchSelector.tsx  ConnectionOverlay.tsx  DiffViewer.tsx  Layout.tsx  SessionTabBar.tsx  SettingsModal.tsx  StatusBar.tsx  Terminal.tsx  TextInputModal.tsx  TmuxManager.tsx  Toolbar.tsx
frontend/src/contexts/: ServerEventsContext.tsx  TerminalContext.tsx
frontend/src/contexts/__tests__/: terminal-encoding.test.ts
frontend/src/hooks/: useActivityDetector.ts  useStatusData.ts  useTmuxSessions.ts
frontend/src/styles/: index.css  theme.ts
frontend/src/utils/: predictive-echo.ts
frontend/src/utils/__tests__/: predictive-echo.test.ts
frontend/src/workers/: activity-worker.ts
server/: Cargo.toml
server/src/: main.rs
